[project]
name = "waypoint"
version = "0.1.0"
description = "Finds worthy small-town road-trip stops: independent lodging, non-chain food, town character"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35",
    "defusedxml>=0.7",
    "fastapi>=0.139.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
